# booking-machine

./: .dockerignore  Cargo.toml  Dockerfile  azure-pipelines.yml  commit-deploy.sh  sample.env  watch.sh
src/: main.rs
src/api/: mod.rs  routes.rs  routes_helpers.rs  routes_structs.rs
src/handlers/: mongo.rs
src/middlewares/: auth.rs
src/models/: mongo.rs
