[package]
name = "booking-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
bson = { version = "2.4.0", features = ["chrono-0_4"] }
chrono = "0.4.22"
dotenv = "0.15.0"
env_logger = "0.9.1"
futures = "0.3.24"
futures-util = "0.3.24"
jsonwebtoken = "8.1.1"
mongodb = "2.3.1"
serde = "1.0.145"
serde_json = "1.0.85"
urlencoding = "2.1.2"
